# ClawaaS

./: .gitignore  CLAUDE.md  README.md  breif-architecture
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  auth_utils.py  config.py  db.py  main.py  models.py  provisioner.py
apps/api/app/routers/: __init__.py  agents.py  auth.py
apps/web/: .env.example  README.md  next.config.js  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/agents/[id]/: page.tsx
apps/web/src/app/agents/[id]/logs/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/lib/: api.ts
docs/: known-limitations.md  product-goal.md
docs/adr/: 0001-user-isolation.md
docs/runbooks/: bootstrap-flow.md  manual-runtime-checklist.md  server-setup.md  testing-guide.md
ops/runtime/: bootstrap_agent.sh  create_linux_user.sh  delete_agent.sh  inject_container_certs.sh  install_runtime.sh  render_openclaw_config.py  start_gateway.sh  stop_gateway.sh  verify_host.sh
ops/sudoers/: app-provisioner
ops/systemd/: openclaw-gateway@.service
tests/smoke/: cleanup.sh  single_user_runtime.sh  two_user_isolation.sh
