[project]
name = "clawaas-api"
version = "0.1.0"
description = "ClawaaS control plane — per-user isolated OpenClaw/OpenShell runtime demo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "aiosqlite>=0.21",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
